alignment correction done

--- a/src/Home.css
+++ b/src/Home.css
@@ -5,20 +5,38 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: rgb(0, 21, 41); /* Set the background color */
   }
   
-  h1 {
-    text-align: center;
+  .welcome-text {
+    color: white; /* Set the text color to white */
   }
   
-  /* Apply styles only to the Home page image */
   .home-image-container {
+    position: relative;
     margin-top: 20px;
+    width: 80%; /* Set the width of the container for the image */
+    max-width: 400px; /* Set a maximum width for the container */
   }
   
   .home-image-container img {
-    width: 200px;
-    height: 200px;
+    width: 100%; /* Set the image width to 100% of its container */
+    max-height: 400px; /* Set the maximum height for the image */
+    height: auto; /* Let the height adjust proportionally */
     cursor: pointer;
+  }
+  
+  .image-text-container {
+    margin-top: 10px; /* Add some spacing between the image and the text */
+    text-align: center;
+    width: 95%; /* Set the width of the text container to 80% */
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    color: white; /* Set the text color to white */
+  }
+  
+  .image-text-container p {
+    font-size: 16px;
+    margin: 5px 0;
   }
   
